# LOL_data_collection

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: process_features.py  scrape_matches.py
src/processing/: config.py  match_features.py  match_filters.py
src/riot_api/client/: request.py  routing.py
src/riot_api/endpoints/: ladders.py  matches.py  summoner.py
src/scraping/: config.py
src/utils/: file_utils.py  logging_utils.py
